# genai-rag-app

./: README.md  docker-compose.yaml
.devcontainer/backend/: Dockerfile  devcontainer.json
.devcontainer/frontend/: Dockerfile  devcontainer.json
backend/: api.Dockerfile  pyproject.toml
backend/notebooks/: rag_tests.ipynb  read_cv.ipynb
backend/src/: backend.py
frontend/: README.md  app.Dockerfile  pyproject.toml
frontend/src/: app.py  utils.py
