[tool.poetry]
name = "rag-module"
version = "0.1.0"
description = ""
authors = ["Roberto Hernandez <betohr60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.9.7 || >3.9.7,<3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
openai = "^1.14.2"
minio = "^7.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
